# kuurier

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  PROGRESS.md  README.md
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  diagnose-server.yml  website.yml
apps/android/: .gitignore  settings.gradle.kts
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/api/: client.rs  mod.rs  websocket.rs
apps/desktop/src-tauri/src/crypto/: ed25519.rs  keystore.rs  mod.rs  signal.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/notifications/: mod.rs
apps/desktop/src-tauri/src/sync/: qr.rs
apps/desktop/src-tauri/src/tor/: mod.rs
apps/web/: package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE_PLAN.md  SECRETS.md
infra/docker/: .env.production.example  Dockerfile.server  docker-compose.prod.yml  docker-compose.yml
infra/nginx/: kuurier.conf
infra/scripts/: init-db.sh
server/: .env.production.example  Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  run-local.sh  setup.sh
server/migrations/: 000_complete_schema.sql  001_initial_schema.sql  002_invite_system.sql  003_event_location_privacy.sql  004_signal_keys.sql  005_organizations.sql  006_messages.sql  009_multi_device.sql  010_display_names.sql  (+2 more)
website/: index.html  privacy.html
(+161 files in other folders)
