[package]
name = "kuurier-desktop"
version = "0.1.0"
description = "Kuurier Desktop — Privacy-first activist platform"
authors = ["Kuurier"]
edition = "2021"

[lib]
name = "kuurier_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "kuurier-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
